--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,17 @@
-.clappr_playback_name_plugin {
-  color: #00ff00;
+#clappr_playback_name_plugin {
+  position: absolute;
+  z-index: 3000;
+  top: 20px;
+  right: 20px;
+  font-smooth: never;
+  -webkit-font-smoothing : none;
+  background-color: rgba(0,0,0,0.7);
+  color: rgb(255,255,255);
+  border-radius: 3px;
+  font-size: 16px;
+  padding: 10px;
+}
+
+#clappr_playback_name_plugin > p {
+  color: yellow;
 }
